# thalia_syntax

./: .editorconfig  CMakeLists.txt  README.md  grammar.ebnf  grammar.gr
demo/: ast_expr_view.cpp  ast_expr_view.hpp  main.cpp
include/thalia/syntax/: ast.hpp  exception.hpp  expr_parser.hpp  exprs.hpp  lexer.hpp  lexer_content.hpp  node.hpp  parser_content.hpp  token.hpp
include/thalia/syntax/lexer/: lexer.hpp
include/thalia/syntax/parser/: expr_parser.hpp
src/lexer/: content.cpp  content.hpp  expr_parser.cpp  lexer.cpp  lexer.hpp  lexer_content.cpp  parser_content.cpp
src/parser/: expr_parser.cpp  parser_content.cpp
